--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </button>
         </div>
         <nav class="nav" id="mainNav">
-          <a href="Home.html">HOME</a>
+          <a href="index.html">HOME</a>
           <a href="pages/About-me.html">ABOUT ME</a>
           <a href="pages/Projects.html">PROJECTS</a>
           <a href="pages/Contact.html">CONTACT ME</a>
