--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -20,7 +20,7 @@
           </button>
         </div>
         <nav class="nav" id="mainNav">
-          <a href="../Home.html">HOME</a>
+          <a href="../index.html">HOME</a>
           <a href="About.html">ABOUT ME</a>
           <a href="Projects.html">PROJECTS</a>
           <a href="Contact.html" class="active">CONTACT ME</a>
@@ -58,13 +58,9 @@
             <a href="#"><img src="../img/mdi_linkedin.svg" alt="linkedin" /></a>
           </div>
         </div>
-        <div class="image-container">
-          <img src="../img/meeeee.jpg" alt="Profile" class="profile-img" />
-        </div>
       </section>
       <footer class="footer">
         <img src="../img/tbc-logo.png" alt="TBC Logo" />
-        <p>© 2025 Esmira Aghamedova. All rights reserved.</p>
       </footer>
     </main>
     <script>
