--- a/pages/About-me.html
+++ b/pages/About-me.html
@@ -3,14 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="styles/reset.css" />
+    <title>About Me | Esmira Aghamedova</title>
+    <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/About-me.css" />
-    <title>About me - Esmira Aghamedova</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <!-- 🔝 HEADER -->
+    <header class="header">
+      <div class="logo-burger">
+        <div class="logo">ESMIRA.</div>
+        <button class="burger-menu" id="burgerBtn" aria-label="Open menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+      <nav class="nav" id="mainNav">
+        <a href="../index.html">HOME</a>
+        <a href="About-me.html">ABOUT ME</a>
+        <a href="Projects.html">PROJECTS</a>
+        <a href="Contact.html">CONTACT ME</a>
+      </nav>
+    </header>
+
+    <!-- 👩‍💻 ABOUT ME SECTION -->
+    <section class="about-section" id="about">
+      <div class="about-container">
+        <h2 class="about-title">About Me</h2>
+        <div class="about-content">
+          <div class="about-text">
+            <p>
+              Hi! I'm <strong>Esmira Aghamedova</strong> — a passionate
+              front-end developer and UI/UX designer based in Tbilisi.
+            </p>
+            <p>
+              I'm currently a high school student with a deep love for building
+              elegant websites and crafting user-friendly designs. I began my
+              coding journey with HTML & CSS, and since then, I’ve been diving
+              deeper into JavaScript, React, and the beauty of design systems.
+            </p>
+            <p>
+              My work blends logic and creativity — I believe a good design not
+              only looks good but <em>feels right</em> to the user.
+            </p>
+            <p>
+              When I'm not coding, you’ll probably find me listening to K-pop,
+              sketching UI ideas, or sipping tea while brainstorming my next
+              project.
+            </p>
+            <p>Let’s connect and create something meaningful together!</p>
+          </div>
+          <div class="about-image-container">
+            <img
+              src="../img/about-img.jpg"
+              alt="Esmira's photo"
+              class="about-img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 🔚 FOOTER -->
+    <footer class="footer">
+      <a href="https://tbceducation.ge" target="_blank">
+        <img src="../img/tbc-logo.png" alt="TBC Logo" />
+      </a>
+    </footer>
+
+    <!-- 🍔 BURGER MENU JS -->
+    <script>
+      const burgerBtn = document.getElementById("burgerBtn");
+      const mainNav = document.getElementById("mainNav");
+
+      burgerBtn.addEventListener("click", () => {
+        mainNav.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
