--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p class="role">Front-end developer & UI/UX Designer</p>
           <div class="buttons">
             <button class="button">CV</button>
-            <button class="button">Certificates</button>
+            <a href="pages/Certificate.html"><button class="button">Certificates</button></a>
           </div>
           <div class="socials">
             <a href="https://www.instagram.com/esmoo2009" target="_blank"
