--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h2 class="surname">AGHAMEDOVA</h2>
           <p class="role">Front-end developer & UI/UX Designer</p>
           <div class="buttons">
-            <button class="button">CV</button>
+            <a href="pdf/Esmira_Aghamedova_CV.docx" download><button class="button">CV</button></a>
             <a href="pages/Certificate.html"><button class="button">Certificates</button></a>
           </div>
           <div class="socials">
